tests/smt2/error/produce-core-false.smt2
(set-option :produce-unsat-cores false)
(declare-const a Bool)
(assert (! a :named an))
(check-sat-assuming ((not an)))
(get-unsat-core)